--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,3 +1,7 @@
 rootProject.name = 'sms_contacts'
 
 include ':app'
+
+include ':pgcontacts'
+project(':pgcontacts').projectDir = new File(
+        rootProject.projectDir, '../node_modules/react-native-paged-contacts/android/')
