example supports ios

--- a/ios/sms_contacts/Info.plist
+++ b/ios/sms_contacts/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
+	<key>NSContactsUsageDescription</key>
+	<string>mock</string>
 	<key>CFBundleDisplayName</key>
 	<string>sms_contacts</string>
 	<key>CFBundleExecutable</key>
@@ -41,7 +43,6 @@
 	<key>NSLocationWhenInUseUsageDescription</key>
 	<string></string>
 	<key>NSAppTransportSecurity</key>
-	<!--See http://ste.vn/2015/06/10/configuring-app-transport-security-ios-9-osx-10-11/ -->
 	<dict>
 		<key>NSExceptionDomains</key>
 		<dict>
