--- a/package.json
+++ b/package.json
@@ -9,10 +9,10 @@
   "dependencies": {
     "react": "16.0.0",
     "react-native": "0.51.0",
-    "react-redux": "^5.0.6",
-    "redux": "^3.7.2",
     "react-native-paged-contacts": "git+https://github.com/wix/react-native-paged-contacts.git",
-    "react-native-sms": "^1.5.2"
+    "react-native-sms": "git+https://github.com/auval/react-native-sms.git",
+    "react-redux": "^5.0.6",
+    "redux": "^3.7.2"
   },
   "devDependencies": {
     "babel-jest": "22.2.2",
